package except;

public class KarlsonActionException extends Exception{
    public KarlsonActionException(String message){
        super(message);
    }
}
