package except;

public class NullPointerInCharacterObject extends RuntimeException{
    public NullPointerInCharacterObject(String message){
        super(message);
    }
}
