package interfs;

public interface Changable {
    String addEnding(String a, String b);
    String addPredl(String a, String b);
}
