package interfs;

public interface VRaszveteSil {
    String karlsonSay();
}
